# final_statistics

./: README.md  README_TECNICO.md  analisis_regresion_completo.py  dropout.csv  pyproject.toml
